
Coccinella-0.95.2 (04????): 	Short summary --

        - each page, roster, disco, browser, agents, now have their own status
	  widget
	- extended buddy pouncing
	- added automatic login option
	- improved smiley/url text parsing which is 20 times faster
	- reworked layoyt of tree widget
	- muc chatrooms now show users role
	- httpd can mount directories; using css for 404 and dir listings


Coccinella-0.95.1 (040930): 	Short summary --

	- SASL authentication
	- Reworked several dialogs (new user, edit user, subscription)
	- Reworked how transports are displayed and handled


Coccinella-0.95.0 (040904): 	Short summary --

        - tabbed chat dialog
	- auto hide scrollbars
	- new info menu
	- reworked the profile settings dialog
	- reorganized prefs panels
	- improved notebook interface for smoother refresh
	- added the possibility to use ssl when registering new account
	- now automatically login after registration
	- buddy pouncing as a component
	- reworked incoming message dialog
	- extra options for profiles now in tabbed notebook
	- Itcl interface for applets accessing whiteboard functions
	- Itcl runtime environment for applets
	- mechanism to add custom protocol
	- card game applet as a first example of runtime and custom protocol
	- slide show component
	- xmpp uri parser
	- restricted to single instance on Windows
	- synced playback for QuickTime
	- using disco as default in place of browse


Coccinella-0.94.11 (040601): 	Short summary --

        - internal ip not always set correctly which made transfers fail


Coccinella-0.94.10 (040528): 	Short summary --

        - STRINGPREP fixes in roster, browse, disco,...
	- minor fixes for XMPP (ejabberd and jabberd2)


Coccinella-0.94.9 (04????): 	Short summary --

        - prepared for using xml/svg for all whiteboard stuff
	- major internal code reorganizations to separate whiteboard code
          from rest and be independent of protocols
	- reworked the groupchat dialog from scratch